[package]
name = "schnorr_nizk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.8.5"
keyring = "2.0.1"
base64 = "0.21.0"
linux-keyutils = "0.2.3"


[target.x86_64-unknown-linux-gnu]

[target.armv7-unknown-linux-gnueabihf]

#linker = "arm-none-linux-gnueabihf-gcc"

