[package]
name = "schnorr_nizk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.8.5"
rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
keyring = "2.0.1"
linux-keyutils = "0.2.3"
curve25519-dalek = "3.2.1"
hex = "0.4.3"
serde = "1.0.160"
serde_json = "1.0.96"
chrono = "0.4.24"

tiny-keccak = { version = "2.0.2", features = ["kmac", "sha3"] }

[target.x86_64-unknown-linux-gnu]

[target.arm-unknown-linux-gnueabihf]

#linker = "arm-none-linux-gnueabihf-gcc"

